--- a/frontend/semantic_pulse_interface.html
+++ b/frontend/semantic_pulse_interface.html
@@ -242,16 +242,16 @@
                 <div class="pulse-title">Bid Pulse</div>
             </div>
             <div class="pulse-description">
-                Competitive intent, pricing, and offers. Triggers attention-grabbing responses for action-oriented decisions.
+                Proposal of value or demand across components or agents. Flows downward to BiddingAgent nodes for competitive evaluation.
             </div>
             <div class="pulse-stats">
                 <div class="stat-item">
-                    <div class="stat-label">Urgency</div>
-                    <div class="stat-value">High</div>
+                    <div class="stat-label">Direction</div>
+                    <div class="stat-value">↓ Downward</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-label">Color</div>
-                    <div class="stat-value">#FFC107</div>
+                    <div class="stat-label">Target</div>
+                    <div class="stat-value">BiddingAgent</div>
                 </div>
             </div>
             <button class="pulse-trigger" onclick="triggerPulse('bid_pulse')">
@@ -266,16 +266,16 @@
                 <div class="pulse-title">Occupancy Pulse</div>
             </div>
             <div class="pulse-description">
-                Spatial requests and usage claims. Represents movement, presence, and spatial allocation needs.
+                Spatial or functional usage request/claim. Flows upward to OccupancyNode for spatial allocation processing.
             </div>
             <div class="pulse-stats">
                 <div class="stat-item">
-                    <div class="stat-label">Urgency</div>
-                    <div class="stat-value">Medium</div>
+                    <div class="stat-label">Direction</div>
+                    <div class="stat-value">↑ Upward</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-label">Color</div>
-                    <div class="stat-value">#2196F3</div>
+                    <div class="stat-label">Target</div>
+                    <div class="stat-value">OccupancyNode</div>
                 </div>
             </div>
             <button class="pulse-trigger" onclick="triggerPulse('occupancy_pulse')">
@@ -290,16 +290,16 @@
                 <div class="pulse-title">Compliancy Pulse</div>
             </div>
             <div class="pulse-description">
-                Enforcement, constraints, and violations. Trustworthy and serious institutional responses.
+                Enforcement or validation of regulatory or systemic rules. Cross-subtree flow to ComplianceNode for rule validation.
             </div>
             <div class="pulse-stats">
                 <div class="stat-item">
-                    <div class="stat-label">Urgency</div>
-                    <div class="stat-value">Critical</div>
+                    <div class="stat-label">Direction</div>
+                    <div class="stat-value">↔ Cross-subtree</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-label">Color</div>
-                    <div class="stat-value">#1E3A8A</div>
+                    <div class="stat-label">Target</div>
+                    <div class="stat-value">ComplianceNode</div>
                 </div>
             </div>
             <button class="pulse-trigger" onclick="triggerPulse('compliancy_pulse')">
@@ -314,16 +314,16 @@
                 <div class="pulse-title">Fit Pulse</div>
             </div>
             <div class="pulse-description">
-                Geometric and contextual matching. Signifies success, confirmation, and positive validation.
+                Evaluation of geometric, functional, or contextual suitability. Lateral flow to MEPSystemNode for system analysis.
             </div>
             <div class="pulse-stats">
                 <div class="stat-item">
-                    <div class="stat-label">Urgency</div>
-                    <div class="stat-value">Low</div>
+                    <div class="stat-label">Direction</div>
+                    <div class="stat-value">← Lateral →</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-label">Color</div>
-                    <div class="stat-value">#4CAF50</div>
+                    <div class="stat-label">Target</div>
+                    <div class="stat-value">MEPSystemNode</div>
                 </div>
             </div>
             <button class="pulse-trigger" onclick="triggerPulse('fit_pulse')">
@@ -338,16 +338,16 @@
                 <div class="pulse-title">Investment Pulse</div>
             </div>
             <div class="pulse-description">
-                Capital signals and resource allocation. Warm and motivating with urgency to commit resources.
+                Capital flow or readiness to engage based on fit and returns. Broadcast to InvestmentNode for capital evaluation.
             </div>
             <div class="pulse-stats">
                 <div class="stat-item">
-                    <div class="stat-label">Urgency</div>
-                    <div class="stat-value">High</div>
+                    <div class="stat-label">Direction</div>
+                    <div class="stat-value">📡 Broadcast</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-label">Color</div>
-                    <div class="stat-value">#FF9800</div>
+                    <div class="stat-label">Target</div>
+                    <div class="stat-value">InvestmentNode</div>
                 </div>
             </div>
             <button class="pulse-trigger" onclick="triggerPulse('investment_pulse')">
@@ -362,16 +362,16 @@
                 <div class="pulse-title">Decay Pulse</div>
             </div>
             <div class="pulse-description">
-                Decline, obsolescence, and reset readiness. Low visibility and subtle decay indicators.
+                Signal of system degradation, expiry, or reset readiness. Downward flow to Any node type for generic processing.
             </div>
             <div class="pulse-stats">
                 <div class="stat-item">
-                    <div class="stat-label">Urgency</div>
-                    <div class="stat-value">Low</div>
+                    <div class="stat-label">Direction</div>
+                    <div class="stat-value">↓ Downward</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-label">Color</div>
-                    <div class="stat-value">#9E9E9E</div>
+                    <div class="stat-label">Target</div>
+                    <div class="stat-value">Any</div>
                 </div>
             </div>
             <button class="pulse-trigger" onclick="triggerPulse('decay_pulse')">
